crates/keron-lang/tests/corpus/errors/check/list_contains_wrong_element_type.keron
val xs: List<String> = ["a", "b"]
val n: Boolean = list_contains(xs, 42)
